# space-game

./: .gitattributes  Cargo.toml  README.md
assets/shaders/: building_material.wgsl
assets/skybox/: skybox.ktx2
src/: app_setup.rs  block.rs  building_material.rs  camera.rs  fixed_update.rs  free_camera.rs  lib.rs  main.rs  pause.rs  player.rs  player_camera.rs  player_controller.rs  raycast_selection.rs  reticle.rs  settings.rs  skybox.rs
src/building/: events.rs  mod.rs
src/grid/: block.rs  chunk.rs  collider.rs  command.rs  mesh.rs  mod.rs  plugin.rs
tests/: fixed_input.rs
tests/scaffolding/: mod.rs
