[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.21"
bevy-inspector-egui = "0.19"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", features = [ "debug-render-3d", "simd-stable" ] }
big_space = { version = "0.3.0", default-features = false, features = ["debug"] }

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_sprite",
    "bevy_pbr",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
    "dynamic_linking",
    "multi-threaded",
    "ktx2",
    "zstd",
    "bevy_gizmos",
    "tonemapping_luts",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3